--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </div>
 <div class="bottom-wrapper wrapper">
-<h2 class="intro">Our Teams have been working on an Amazing crypto-based Proof Of Concept. <br/>The KryptoHunt will begin soon in your School!</h2>
+<h2 class="intro">Our Teams have been working on an Amazing crypto-based Proof Of Concept. <br/>The #KRYPTO_HUNT is coming soon!</h2>
 <div id="subscribe">  
 	
 
