--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<meta name="Author" content="KRYPTOSPHERE®"> 
-		<title>KRYPTOSPHERE®</title>
+		<title>THE KRYPTO-HUNT® Project</title>
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" /> 
 		<link href='http://fonts.googleapis.com/css?family=Raleway:200,400,800' rel='stylesheet' type='text/css'>
@@ -31,7 +31,7 @@
 
 </div>
 <div class="bottom-wrapper wrapper">
-<h2 class="intro">Our Teams have been working on an Amazing crypto-based Proof Of Concept. <br/>The #KRYPTO_HUNT is coming soon!</h2>
+<h2 class="intro">Our student teams have been working on an amazing crypto-based Proof Of Concept<br/>The #KRYPTO_HUNT® is coming soon!</h2>
 <div id="subscribe">  
 	
 
