--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="top-wrapper">
 <div id="header">
 <div class="wrapper">
-	<h1><a href="#" class="logo">KRYPTOSPHERE®</a></h1>	
+	<h1><a href="https://kryptosphere.org/" class="logo">KRYPTOSPHERE®</a></h1>	
 	</div>
 </div>
 <div class="countdown styled"></div> 
