--- a/index.html
+++ b/index.html
@@ -32,15 +32,13 @@
 </div>
 <div class="bottom-wrapper wrapper">
 <h2 class="intro">Our student teams have been working on an amazing crypto-based Proof Of Concept<br/>The #KRYPTO_HUNT® is coming soon!</h2>
-<div id="subscribe">  
-	
 
-	<div id="socialIcons">
-		<ul> 
-			
-		</ul>
-	</div>
-</div> 
+<div class="logoecoles">
+<img src="img/CM.png" alt="Logo Centrale Marseille" style="width:350px;height:110px;border:0;">
+<img src="img/KBS.png" alt="Logo Kedge Business School" style="width:250px;height:90px;border:0;">
+<img src="img/KS.png" alt="Logo Kedge Business School">
+</div>	
+	
 <span class="tempBy"> KRYPTOSPHERE&copy; 2019, tous droits réservés. <br/><a href="https://kryptosphere.org" target="_blank"></a> </span>
 </div>
 </div> 
