--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <img src="img/KS.png" alt="Logo Kedge Business School">
 </div>	
 	
-<span class="tempBy"><i>Developed by KRYPTOSPHERE®, 2019, tous droits réservés. <br/><a href="https://kryptosphere.org" target="_blank"></i></a> </span>
+<span class="tempBy"><i>Developed by KRYPTOSPHERE®, tous droits réservés 2019. <br/><a href="https://kryptosphere.org" target="_blank"></i></a> </span>
 </div>
 </div> 
  
