--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<meta name="Author" content="KRYPTOSPHERE®"> 
-		<title>THE KRYPTO-HUNT® PROJECT</title>
+		<title>THE KRYPTO_HUNT® POC</title>
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" /> 
 		<link href='http://fonts.googleapis.com/css?family=Raleway:200,400,800' rel='stylesheet' type='text/css'>
