--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <h2 class="intro">Our student teams have been working on an amazing crypto-based Proof Of Concept:<br/>The #KRYPTO_HUNT® is coming soon!</h2>
 
 <div class="logoecoles">
-<a img src="img/CM.png" href="https://www.centrale-marseille.fr/" target="_blank" alt="Logo Centrale Marseille" style="width:350px;height:110px;border:0;"</a>
-<a img src="img/KBS.png" href="https://kedge.edu/" target="_blank" alt="Logo Kedge Business School" style="width:250px;height:90px;border:0;"</a>
-<a img src="img/KS.png" href="https://kryptosphere.org/" target="_blank" alt="Logo KRYPTOSPHERE</a>
+<a>img src="img/CM.png" href="https://www.centrale-marseille.fr/" target="_blank" alt="Logo Centrale Marseille" style="width:350px;height:110px;border:0;"</a>
+<a>img src="img/KBS.png" href="https://kedge.edu/" target="_blank" alt="Logo Kedge Business School" style="width:250px;height:90px;border:0;"</a>
+<a>img src="img/KS.png" href="https://kryptosphere.org/" target="_blank" alt="Logo KRYPTOSPHERE</a>
 </div>	
 	
 <span class="tempBy"><i>Developed by KRYPTOSPHERE®, tous droits réservés 2019. <br/><a href="https://kryptosphere.org" target="_blank"></i></a> </span>
