--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="top-wrapper">
 <div id="header">
 <div class="wrapper">
-	<h1><a href="https://kryptosphere.org/" target="_blank" class="logo">KRYPTOSPHERE®</a></h1>	
+	<h1><a href="https://kryptosphere.org/" target="_blank" class="logo">THE KRYPTO_HUNT® PROJECT</a></h1>	
 	</div>
 </div>
 <div class="countdown styled"></div> 
@@ -33,7 +33,7 @@
 <div class="bottom-wrapper wrapper">
 <h2 class="intro">Our student teams have been working on an amazing crypto-based Proof Of Concept:<br/>The #KRYPTO_HUNT® is coming soon!</h2>
 
-<div class="logoecoles">
+<div>
 <a href="https://www.centrale-marseille.fr/" target="_blank"><img src="img/CM.png" alt="Logo Centrale Marseille" style="width:350px;height:110px;border:0;">
 <a href="https://kedge.edu/" target="_blank"><img src="img/KBS.png" alt="Logo Kedge Business School" style="width:250px;height:90px;border:0;">
 <a href="https://kryptosphere.org/" target="_blank"><img src="img/KS.png" alt="Logo KRYPTOSPHERE">
