--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <a href="https://kryptosphere.org/" target="_blank"><img src="img/KS.png" alt="Logo KRYPTOSPHERE">
 </div>
 	
-<span class="tempBy"><i>Developed by KRYPTOSPHERE®, tous droits réservés 2019. <br/><a href="https://kryptosphere.org" target="_blank"></i></a> </span>
+<span class="tempBy"><a href="https://kryptosphere.org" target="_blank"><i>Developed by KRYPTOSPHERE®, tous droits réservés 2019. <br/></i></a> </span>
 </div>
 </div> 
  
