--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<meta name="Author" content="KRYPTOSPHERE®"> 
-		<title>THE KRYPTO_HUNT® POC</title>
+		<title>THE KRYPTO_HUNT® PROJECT</title>
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" /> 
 		<link href='http://fonts.googleapis.com/css?family=Raleway:200,400,800' rel='stylesheet' type='text/css'>
@@ -24,7 +24,7 @@
 <div class="top-wrapper">
 <div id="header">
 <div class="wrapper">
-	<h1><a href="https://kryptosphere.org/" target="_blank" class="logo">THE KRYPTO_HUNT® PROJECT</a></h1>	
+	<h1><a href="https://kryptosphere.org/" target="_blank" class="logo">THE KRYPTO_HUNT®</a></h1>	
 	</div>
 </div>
 <div class="countdown styled"></div> 
