--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </div>
 <div class="bottom-wrapper wrapper">
-<h2 class="intro">Our student teams have been working on an amazing crypto-based Proof Of Concept:<br/>The #KRYPTO_HUNT® is coming soon!</h2>
+<h2 class="intro">Our students teams has been working on an amazing crypto-based Proof Of Concept:<br/>The #KRYPTO_HUNT® is coming soon!</h2>
 
 <div>
 <a href="https://www.centrale-marseille.fr/" target="_blank"><img src="img/CM.png" alt="Logo Centrale Marseille" style="width:350px;height:110px;border:0;">
