--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <a href="https://www.centrale-marseille.fr/" target="_blank"><img src="img/CM.png" alt="Logo Centrale Marseille" style="width:350px;height:110px;border:0;">
 <a href="https://kedge.edu/" target="_blank"><img src="img/KBS.png" alt="Logo Kedge Business School" style="width:250px;height:90px;border:0;">
 <a href="https://kryptosphere.org/" target="_blank"><img src="img/KS.png" alt="Logo KRYPTOSPHERE">
+<a href="https://bda.asso.centrale-marseille.fr/" target="_blank"><img src="img/BDA.png" alt="Logo BAD Centrale Marseille" style="width:250px;height:90px;border:0;">
 </div>
 	
 <span class="tempBy"><a href="https://kryptosphere.org" target="_blank"><i>Developed by KRYPTOSPHERE®, tous droits réservés 2019. <br/></i></a> </span>
