--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <a href="https://bda.asso.centrale-marseille.fr/" target="_blank"><img src="img/BDA.png" alt="Logo BAD Centrale Marseille" style="width:250px;height:90px;border:0;">
 </div>
 	
-<span class="tempBy"><a href="https://kryptosphere.org" target="_blank"><i>Developed by KRYPTOSPHERE®, all rights reserved 2019. <br/></i></a> </span>
+<span class="tempBy"><a href="https://kryptosphere.org" target="_blank"><i>Developed & run by KRYPTOSPHERE®, all rights reserved 2019. <br/></i></a> </span>
 </div>
 </div> 
  
