--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>The KRYPTO_HUNT® 2019</title>
-    <meta name="description" content="The KRYPTO_HUNT® 2019">
+    <title>EasyMove 2023</title>
+    <meta name="description" content="">
     <meta name="author" content="Thibault Langlois-Berthelot">
 
     <!-- mobile specific metas
