--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>LIBER'TITRE 2023</title>
-    <meta name="description" content="">
+    <title>LIBER'TITRE</title>
+    <meta name="description" content="HACKATHON LIBER'TITRE est le Juste Titre pour tous vos voyages.">
     <meta name="author" content="Thibault Langlois-Berthelot">
 
     <!-- mobile specific metas
