--- a/index.html
+++ b/index.html
@@ -83,12 +83,11 @@
 
             <div class="row home-content__main">
                 <h1>
-                Enter the KRYPTO_HUNT® Game
+                Le compte unique pour votre mobilité
                 </h1>
 
                 <p>
-                    Discover the city of Marseille in a 2.0 fun and Interactive way, <br>
-                    Using Blockchain Technology
+                    Voyager en toute simplicité<br>
                 </p>
             </div> 
 
