--- a/index.html
+++ b/index.html
@@ -94,26 +94,10 @@
         </div> <!-- end home-content -->
 
         <ul class="home-sidelinks">
-            <li><a class="smoothscroll" href="#about">About us<span>Who we are?</span></a></li>
-            <li><a class="smoothscroll" href="#services">Our Project<span>The KRYPTO_HUNT®</span></a></li>
-            <li><a  class="smoothscroll" href="#contact">Contact us<span>Any questions?</span></a></li>
+            <li><a class="smoothscroll" href="#about">About us<span>Qui sommes-nous ?</span></a></li>
+            <li><a class="smoothscroll" href="#services">Our Project<span>Notre solution</span></a></li>
+            <li><a  class="smoothscroll" href="#contact">Contact us<span>Nous contacter</span></a></li>
         </ul> <!-- end home-sidelinks -->
-
-        <ul class="home-social">
-            <li class="home-social-title">Follow Us</li>
-            <li><a href="https://www.facebook.com/search/pages/?q=kryptosphere&epa=SERP_TAB">
-                <i class="fab fa-facebook"></i>
-                <span class="home-social-text">Facebook</span>
-            </a></li>
-            <li><a href="https://twitter.com/KryptoSphere_?lang=en">
-                <i class="fab fa-twitter"></i>
-                <span class="home-social-text">Twitter</span>
-            </a></li>
-            <li><a href="https://www.linkedin.com/company/kryptosphereblockchain/?viewAsMember=true">
-                <i class="fab fa-linkedin"></i>
-                <span class="home-social-text">LinkedIn</span>
-            </a></li>
-        </ul> <!-- end home-social -->
 
         <a href="#about" class="home-scroll smoothscroll">
             <span class="home-scroll__text">Scroll Down</span>
