--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </ul> <!-- end home-sidelinks -->
 
         <a href="#about" class="home-scroll smoothscroll">
-            <span class="home-scroll__text">Scroll Down</span>
+            <span class="home-scroll__text">Découvrez-nous</span>
             <span class="home-scroll__icon"></span>
         </a> <!-- end home-scroll -->
 
@@ -112,7 +112,7 @@
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">Who We Are</h3>
+                <h3 class="subhead">Qui sommes-nous ?</h3>
                 <h1 class="display-1">Bringing the Blockchain Technology for the people</h1>
             </div>
         </div> <!-- end section-header -->
