--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <div class="row home-content__main">
                 <h1>
-                Le compte unique pour votre mobilité
+                Le compte unique de votre mobilité
                 </h1>
 
                 <p>
@@ -94,7 +94,7 @@
         </div> <!-- end home-content -->
 
         <ul class="home-sidelinks">
-            <li><a class="smoothscroll" href="#about">About us<span>Notre concept</span></a></li>
+            <li><a class="smoothscroll" href="#about">Notre concept<span>Vous offrir le juste titre</span></a></li>
             <li><a class="smoothscroll" href="#services">Our Project<span>Notre solution</span></a></li>
             <li><a  class="smoothscroll" href="#contact">Contact us<span>Nous contacter</span></a></li>
         </ul> <!-- end home-sidelinks -->
