--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         </div> <!-- end home-content -->
 
         <ul class="home-sidelinks">
-            <li><a class="smoothscroll" href="#about">Notre concept<span>Vous offrir le juste titre</span></a></li>
-            <li><a class="smoothscroll" href="#services">Our Project<span>Notre solution</span></a></li>
-            <li><a  class="smoothscroll" href="#contact">Contact us<span>Nous contacter</span></a></li>
+            <li><a class="smoothscroll" href="#about">Notre concept<span>Un accompagnement personnalisé</span></a></li>
+            <li><a class="smoothscroll" href="#services">Notre solution<span>Vous offrir le juste titre</span></a></li>
+            <li><a  class="smoothscroll" href="#contact">Nous contacter<span>Vos relais d'informations</span></a></li>
         </ul> <!-- end home-sidelinks -->
 
         <a href="#about" class="home-scroll smoothscroll">
