--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="row" data-aos="fade-up">
             <div class="col-full">
                 <p class="lead">
-                    BLABLABALBLALBLAB. 
+                    Encourager la facilité de vos déplacements par l'accompagnement  
                 </p>
             </div>
         </div> <!-- end about-desc -->
