--- a/index.html
+++ b/index.html
@@ -134,11 +134,9 @@
 
                 <div class="col-block process__col" data-item="1" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Engeenering Students</h4>
+                        <h4>Votre inscription</h4>
 
-                        <p>
-                        23 trained students focused on the development of Blockchain applications for students and companies. We currently run two Blockchain LABS in Centrale Marseille and ENSAE ParisTech, more will follow soon.
-                        </p>
+                        <p>BLLALALALALAL                        </p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="2" data-aos="fade-up">
@@ -146,26 +144,25 @@
                         <h4>Business Students</h4>
 
                         <p>
-                        40 business school students are currently organising many events across 3 cities in France (Paris - Rennes - Marseille). They are theorically trained about the Blockchain and crypto-assets technologies.
+                        BLLALALALALAL
                         </p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="3" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Empower the Blockchain Technology</h4>
+                        <h4>Recharger</h4>
 
                         <p>
-                        The Blockchain Technology applications are still at a very early stages on many Public Blockchain, that's why are engeenering students are trying to create secured and friendly applications which everyone can use. 
-                        </p>
+BLLALALALALALBLLALALALALAL
+                            </p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="4" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>European Scale</h4>
+                        <h4>Voyager</h4>
 
                         <p>
-                        Our project beagin in early 2017 with one Business School, we are now the leading European Blockchain students project on the field. 
-                        We are currently working daily with some of the best leaders of this universe, such as <a href="https://kryptosphere.org" target="_blank">Ledger, Consensys France and even Binance.</a>
+                      BLALBLLAABLLLAB
                         </p>
                     </div>
                 </div>
