--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ BLLALALALALALBLLALALALALAL
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">Discover our new Project</h3>
+                <h3 class="subhead">Notre solution</h3>
                 <h1 class="display-1">Play the KRYPTO_HUNT® Game</h1>
             </div>
         </div> <!-- end section-header -->
