--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@ BLLALALALALALBLLALALALALAL
         <div class="row" data-aos="fade-up">
             <div class="col-full">
                 <p class="lead">
-                    This game targets students from Centrale Marseille as well as Kedge Business School, two schools in which the KRYPTOSPHERE® project is present.  
-               <br> The goal of this game is very simple: work as a team to hunt for crypto-assets (ethers) in the heart of Marseille - where QR Codes to be scanned will be placed in various emblematic places of the city - and earn money in a fun, secure and automated way thanks to Blockchain technology. 
+BLABABABABABBAB
                 </p>
             </div>
         </div> <!-- end about-desc -->
@@ -201,8 +200,8 @@ BLLALALALALALBLLALALALALAL
                         <a href="https://kedge.edu/" target="_blank"><img src="images/kbs.png" alt="KRYPTOSPHERE Kedge Business School" style="width:200px;height:100px;"></a>
                 </div>
                 <div class="service-text">
-                    <h3 class="h4">Our Business Partner</h3>
-                    <p>This game is organised in participation with the students KRYPTOSPHERE® team of Kedge Business School. They take care of the event communication as well as finding partnership to finance this project.
+                    <h3 class="h4">Identification via FranceConnect</h3>
+                    <p>BALALAVALVVLAVLAV
                     </p>
                 </div>
             </div>
@@ -213,8 +212,8 @@ BLLALALALALALBLLALALALALAL
                 </div>
                 <div class="service-text">
                     <br>
-                    <h3 class="h4">Our Technical Partner</h3>
-                    <p>The technical side of this event is managed by our engeenering students of Centrale Marseille. They take care of the frond end and back end solutions, to create a user-friendly game everyone can play!
+                    <h3 class="h4">Profil personnalisé</h3>
+                    <p>BLABALVABLABLBLABAL
                     </p>
                 </div>
             </div>
@@ -224,7 +223,7 @@ BLLALALALALALBLLALALALALAL
                         <a href="https://assos.centrale-marseille.fr/bda/accueil" target="_blank"><img src="images/BDA.png" alt="KRYPTOSPHERE Centrale Marseille" style="width:250px;height:100px;"></a>
                 </div>  
                 <div class="service-text">
-                    <h3 class="h4">Our Cultural Partner</h3>
+                    <h3 class="h4">Un titre valable partout</h3>
                     <p>The organising of the cultural aspect of this game is made by the Cultural Centrale Marseille society. From the places chosen to the disposition of the QR Codes, they will make you discover the city like never before.
                     </p>
                 </div>
