--- a/index.html
+++ b/index.html
@@ -223,44 +223,13 @@ BLABABABABABBAB
                         <a href="https://assos.centrale-marseille.fr/bda/accueil" target="_blank"><img src="images/BDA.png" alt="KRYPTOSPHERE Centrale Marseille" style="width:250px;height:100px;"></a>
                 </div>  
                 <div class="service-text">
-                    <h3 class="h4">Un titre valable partout</h3>
-                    <p>The organising of the cultural aspect of this game is made by the Cultural Centrale Marseille society. From the places chosen to the disposition of the QR Codes, they will make you discover the city like never before.
+                    <h3 class="h4">Un titre unique</h3>
+                    <p>Un titre valable partout en France
                     </p>
                 </div>
             </div>
 
-            <div class="col-block service-item" data-aos="fade-up">
-                <div class="service-icon service-icon--product-strategy">
-                    <i class="icon-cube"></i>
-                </div>
-                <div class="service-text">
-                    <h3 class="h4">Using the Smart-Contract technology</h3>
-                    <p>You can read our article to understand <a href="https://bit.ly/2Oa7eEb" target="_blank">the concept behind the Smart-Contract applications.</a>
-                    </p>
-                </div>
-            </div>
-
-            <div class="col-block service-item" data-aos="fade-up">
-                <div class="service-icon  service-icon--ui-design">
-                    <i class="icon-window"></i>
-                </div>
-                <div class="service-text">
-                    <h3 class="h4">Download our specific App</h3>
-                    <p>We have created a dedicted App the player can download to play the game from an easy and intuitive way! You will be able to scan the QR codes directly with it, and interact with our Smart-Contracts.
-                    </p>
-                </div>
-            </div>
-    
-            <div class="col-block service-item" data-aos="fade-up">
-                <div class="service-icon service-icon--mobile-dev">
-                    <i class="icon-lego-block"></i>
-                </div>
-                <div class="service-text">
-                    <h3 class="h4">Follow the Game results in real time</h3>
-                    <p>Thanks to the Blockchain Technology, you will be able to follow the results of the ethers left in the game, directly on the Smart-Contract adress of the KRYPTO_HUNT® Game.
-                    </p>
-                </div>
-            </div>
+           
 
         </div> <!-- end services-list -->
 
