--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@ BLABABABABABBAB
                 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">A concrete example</h3>
-                <h1 class="display-1">This is an example of how you will experience the KRYPTO_HUNT® game from a more concrete way.</h1>
+                <h3 class="subhead">Mon compte unique</h3>
+                <h1 class="display-1">Découvrez les fonctionnalités d'un compte unique en images</h1>
             </div>
         </div> <!-- end section-header -->
 
