--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ BLABABABABABBAB
     <!-- stats
     ================================================== -->
     <section id="stats" class="s-stats">
-
+        <center>
         <div class="row stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
                 
             <div class="col-block stats__col ">
@@ -457,7 +457,7 @@ BLABABABABABBAB
                 <div class="stats__count">10</div>
                 <h5>Partenaires</h5> 
             </div>
-
+</center>
         </div> <!-- end stats -->
 
     </section> <!-- end s-stats -->
