--- a/index.html
+++ b/index.html
@@ -474,15 +474,6 @@ BLABABABABABBAB
             </div>
         </div> <!-- end section-header -->
 
-        <div class="row">
-
-            <div class="col-full contact-main" data-aos="fade-up">
-                <p>
-                <a href="mailto:#0" class="contact-email">contact@libertitre.com</a>
-                <span class="contact-number">+33 (06) 58 21 51 30</span>
-                </p>
-            </div> <!-- end contact-main -->
-
         </div> <!-- end row -->
 
         <div class="row">
@@ -510,7 +501,7 @@ Aucuns droits réservé &copy; | <a href="" target="_blank">LIBER'TITRE</a>
         </div>
 
         <div class="cl-go-top">
-            <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
+            <a class="smoothscroll" title="Revenir au menu" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
         </div>
 
     </section> <!-- end s-contact -->
