--- a/index.html
+++ b/index.html
@@ -447,15 +447,15 @@ BLABABABABABBAB
                 
             <div class="col-block stats__col ">
                 <div class="stats__count">7</div>
-                <h5>A dedicated team of professionals</h5>
+                <h5>Enthousiastes</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">48H</div>
-                <h5>Deux jours de Hackathon</h5>
+                <div class="stats__count">48</div>
+                <h5>Heures de Hackathon</h5>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">10</div>
-                <h5>Partenaires</h5> 
+                <h5>Cafés par personnes</h5> 
             </div>
 </center>
         </div> <!-- end stats -->
