--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ BLABABABABABBAB
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead subhead--light">Nous contacter</h3>
-                <h1 class="display-1 display-1--light">Vous avez des retours sur notre solution ? Contactez-nous :-)</h1>
+                <h1 class="display-1 display-1--light">Vous avez des retours sur notre solution ? :-)</h1>
             </div>
         </div> <!-- end section-header -->
 
@@ -485,12 +485,7 @@ BLABABABABABBAB
                 <p class="contact-address">
                     Chez Martine ;-)
                 </p>
-            </div> <!-- end contact-secondary -->
-
-      
-
-                
-
+            </div> <!-- end contact-secondary --
         </div> <!-- end row -->
 
         <div class="row">
