--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <nav class="header-nav">
 
-            <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
+            <a href="#0" class="header-nav__close" title="close"><span>Fermer</span></a>
 
             <div class="header-nav__content">
                 <h3>LIBER'TITRE</h3>
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col-block process__col" data-item="2" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Business Students</h4>
+                        <h4>Activer votre compte</h4>
 
                         <p>
                         BLLALALALALAL
