--- a/index.html
+++ b/index.html
@@ -262,19 +262,19 @@ BLABABABABABBAB
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Create your team
+                                BLABLBALBALBABL
                             </h3>
                             <p class="item-folio__cat">
-                                    Create a group of 4 teammates and players, get ready to win some crypto-assets in a rush and competitive way! 
+                                    BLABLBALBALBABL 
                             </p>
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Step 1
+                            BLABLBALBALBABL
                         </a>
 
                         <div class="item-folio__caption">
-                            <p>Create a group of 4 teammates and players, get ready to win some crypto-assets in a rush and competitive way! </p>
+                            <p>BLABLBALBALBABL </p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -295,16 +295,16 @@ BLABABABABABBAB
                                 Download our Phone APP
                             </h3>
                             <p class="item-folio__cat">
-                                    Download one phone application per group, a specific crypto-asset account will be linked to it, your are ready for the KRYPTO_HUNT® !
+                                    BLABLBALBALBABL
                             </p>
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Step 2
+                            BLABLBALBALBABL
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Download one phone application per group, a specific crypto-asset account will be linked to it, your are ready for the KRYPTO_HUNT® !</p>
+                            <p>BLABLBALBALBABL</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -322,10 +322,10 @@ BLABABABABABBAB
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Get your instructions
+                                BLABLBALBALBABL
                             </h3>
                             <p class="item-folio__cat">
-                                    Listen carrefully the rules and instructions of the game, so that you can ask all your questions before you begin your crypto-asset Hunt!
+                                   BLABLBALBALBABL
                             </p>
                         </div>
 
@@ -334,7 +334,7 @@ BLABABABABABBAB
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Listen carrefully the rules and instructions of the game, so that you can ask all your questions before you begin your crypto-asset Hunt!</p>
+                            <p>BLABLBALBALBABL</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -355,7 +355,7 @@ BLABABABABABBAB
                                 Begin your KRYPTO_HUNT®!
                             </h3>
                             <p class="item-folio__cat">
-                                Try to establish a strategy to find a maximum of QR codes around the most famous places of Marseille!
+                                BLABLBALBALBABL
                             </p>
                         </div>
 
@@ -364,7 +364,7 @@ BLABABABABABBAB
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Try to establish a strategy to find a maximum of QR codes around the most famous places of Marseille!</p>
+                            <p>BLABLBALBALBABL</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -383,10 +383,10 @@ BLABABABABABBAB
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Watch the result in real time!
+                                BLABLBALBALBABL
                             </h3>
                             <p class="item-folio__cat">
-                                From the beginning of the Hunt, to it's end, you will be able to see a real time ranking of the teams. At the end, 3 prices will be offer to the three first teams. 
+                                BLABLBALBALBABL 
                                                         </p>
                         </div>
 
@@ -395,7 +395,7 @@ BLABABABABABBAB
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>From the beginning of the Hunt, to it's end, you will be able to see a real time ranking of the teams. At the end, 3 prices will be offer to the three first teams.</p>
+                            <p>BLABLBALBALBABL</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -416,7 +416,7 @@ BLABABABABABBAB
                                 Scan the QR codes
                             </h3>
                             <p class="item-folio__cat">
-                                With the phone app we provided to you, scan the QR codes that we have displayed around the different places in Marseille.
+                                BLABLBALBALBABL
                             </p>
                         </div>
 
@@ -425,7 +425,7 @@ BLABABABABABBAB
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>With the phone app we provided to you, scan the QR codes that we have displayed around the different places in Marseille.</p>
+                            <p>BLABLBALBALBABL</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -460,7 +460,6 @@ BLABABABABABBAB
                  </div>
 
         </div> <!-- end stats -->
-
     </section> <!-- end s-stats -->
 
 
