--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ BLABABABABABBAB
 
             <div class="col-block service-item " data-aos="fade-up">
                 <div class="service-icon service-icon--brand-identity">
-                        <a href="https://kedge.edu/" target="_blank"><img src="images/kbs.png" alt="KRYPTOSPHERE Kedge Business School" style="width:200px;height:100px;"></a>
+                        <a href="https://franceconnect.gouv.fr" target="_blank"><img src="images/kbs.png" alt="FranceConnect parce que vous le vallez bien!" style="width:200px;height:100px;"></a>
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Identification via FranceConnect</h3>
@@ -208,7 +208,7 @@ BLABABABABABBAB
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--illustration">
-                        <a href="https://www.centrale-marseille.fr/en" target="_blank"><img src="images/CM.png" alt="KRYPTOSPHERE Centrale Marseille" style="width:320px;height:70px;"></a>
+                        <a href="" target="_blank"><img src="images/CM.png" alt="" style="width:320px;height:125px;"></a>
                 </div>
                 <div class="service-text">
                     <br>
