--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>LIBER'TITRE</title>
+    <title>LIBER'TITRE - Hackathon AIT</title>
     <meta name="description" content="HACKATHON LIBER'TITRE est le Juste Titre pour tous vos voyages.">
     <meta name="author" content="Thibault Langlois-Berthelot">
 
@@ -208,7 +208,7 @@ BLABABABABABBAB
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--illustration">
-                        <a href="" target="_blank"><img src="images/CM.png" alt="" style="width:320px;height:125px;"></a>
+                        <a href="" target="_blank"><img src="images/CM.png" alt="" style="width:320px;height:175px;"></a>
                 </div>
                 <div class="service-text">
                     <br>
@@ -220,7 +220,7 @@ BLABABABABABBAB
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--web-design">
-                        <a href="https://assos.centrale-marseille.fr/bda/accueil" target="_blank"><img src="images/BDA.png" alt="KRYPTOSPHERE Centrale Marseille" style="width:250px;height:100px;"></a>
+                        <a href="" target="_blank"><img src="images/BDA.png" alt="" style="width:250px;height:100px;"></a>
                 </div>  
                 <div class="service-text">
                     <h3 class="h4">Un titre unique</h3>
