--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ BLABABABABABBAB
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--illustration">
-                        <a href="" target="_blank"><img src="images/CM.png" alt="" style="width:320px;height:175px;"></a>
+                        <a href="" target="_blank"><img src="images/CM.png" alt="" style="width:320px;height:225px;"></a>
                 </div>
                 <div class="service-text">
                     <br>
@@ -352,7 +352,7 @@ BLABABABABABBAB
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Begin your KRYPTO_HUNT®!
+                               BLABLALBLA
                             </h3>
                             <p class="item-folio__cat">
                                 BLABLBALBALBABL
@@ -446,7 +446,7 @@ BLABABABABABBAB
         <div class="row stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
              <center>    
             <div class="col-block stats__col ">
-                <div class="stats__count">7</div>
+                <div class="stats__count">8</div>
                 <h5>Enthousiastes</h5>
             </div>
             <div class="col-block stats__col">
